--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
+<!DOCTYPE html>
 <html>
-
 <header>
   <title>title</title>
+
 </header>
 
 <body>
-  Hello!
+
+  <button id="target">Click Me!</button>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
